Support eventSender dispatching click events to popup windows https://bugs.webkit.org/show_bug.cgi?id=312719

Reviewed by Carlos Alberto Lopez Perez.

eventSender always dispatched click events to mainWebView(), making it
impossible to click elements in popup windows opened via window.open().
This caused WPT tests using cross-window test_driver.click() to timeout.

The fix introduces a targetView that is set based on the source page of
the script message, so click events are routed to the correct view.

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-push-from-click-expected.txt:
* LayoutTests/resources/testdriver-vendor.js:
(window.test_driver_internal.click):
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::viewForPage):
(WTR::TestController::didReceiveScriptMessage):
(WTR::TestController::doAfterProcessingAllPendingMouseEvents):
* Tools/WebKitTestRunner/TestController.h:
(WTR::TestController::targetView):
(WTR::TestController::setTargetView):
* Tools/WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::EventSenderProxy::mouseDown):
(WTR::EventSenderProxy::mouseUp):
(WTR::EventSenderProxy::mouseMoveTo):
* Tools/WebKitTestRunner/libwpe/EventSenderProxyClientLibWPE.cpp:
(WTR::viewBackend):
* Tools/WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::mouseDown):
(WTR::EventSenderProxy::mouseUp):
(WTR::EventSenderProxy::mouseMoveTo):
* Tools/WebKitTestRunner/win/EventSenderProxyWin.cpp:
(WTR::EventSenderProxy::dispatchMessage):
* Tools/WebKitTestRunner/wpe/EventSenderProxyClientWPE.cpp:
(WTR::EventSenderProxyClientWPE::mouseDown):
(WTR::EventSenderProxyClientWPE::mouseUp):
(WTR::EventSenderProxyClientWPE::mouseMoveTo):

Canonical link: https://commits.webkit.org/312424@main